# CSE576-CV

hw1/: test0
hw1/src/: access_image.cpp  process_image.cpp
hw2/: CMakeLists.txt  Makefile  test0  test1
hw2/src/: filter_image.cpp  image.h  main.cpp  process_image.cpp  resize_image.cpp
hw2/src/test/: test1.cpp
